# nite-eval

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  pyproject.toml
PLANS/: bfcl-spike-results.md  nite-eval-plan.md  nite-eval-tasks.yaml
config/: eval_config.yaml  judge_swap_config.example.yaml  judge_swap_config.yaml  llama_swap_config.example.yaml  llama_swap_config.yaml
docs/comparisons/: qwen3-family-2026-04-19.md
judges/calibration/: calibration_set.jsonl
judges/calibration/results/: flow-judge.json  reward-anything.json  selene-1-mini.json
scripts/: compare_quants.sh  generate_calibration_set.py  gguf_meta_diff.py  run_calibration.py  run_nightly.sh  score_calibration.py  smoke_test.py  validate_judge_pipeline.py
src/nite_eval/: ast_comparator.py  conversation_runner.py  hermes_parser.py  judge.py  mock_tools.py  model_manager.py  orchestrator.py  report.py  results_db.py  rubrics.py  scoring.py  task_loader.py
tasks/agentic/: agentic_artemis_medium_01.yaml  agentic_brain_easy_01.yaml  agentic_finance_hard_01.yaml  agentic_mcp_hard_01.yaml  agentic_wine_medium_01.yaml
tasks/coding/: coding_artemis_medium_01.yaml  coding_mcp_easy_01.yaml  coding_mcp_hard_01.yaml  coding_wine_medium_01.yaml
tasks/planning/: planning_finance_hard_01.yaml  planning_mcp_medium_01.yaml  planning_wine_easy_01.yaml
tasks/research/: research_finance_hard_01.yaml  research_mcp_easy_01.yaml  research_wine_medium_01.yaml
tests/: test_ast_comparator.py  test_hermes_parser.py  test_mock_tools.py  test_results_db.py  test_scoring.py  test_task_loader.py
