[project]
name = "nite-eval"
version = "0.1.0"
description = "Autonomous overnight LLM evaluation pipeline for local models"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Woojay Poynter" }]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/w00jay/nite-eval"
Repository = "https://github.com/w00jay/nite-eval"
Issues = "https://github.com/w00jay/nite-eval/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-anyio>=0.0.0",
    "ruff>=0.8",
    "pyright>=1.1",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/nite_eval"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
